# kaggle

./: .flake8  .gitignore  LICENSE  README.rst  dvc.yaml  pyproject.toml
kaggle_competitions/: metrics.py
kaggle_competitions/digit_recognizer/: dvc.yaml  eda.ipynb
kaggle_competitions/spaceship_titanic/: dvc.yaml  eda.ipynb  run.py
kaggle_competitions/spaceship_titanic/data/: .gitignore
kaggle_competitions/titanic/: dvc.yaml  main.ipynb  run.py
kaggle_competitions/titanic/data/: .gitignore
tests/: test_metrics.py
