[tool.poetry]
name = "kaggle"
version = "1.0.0"
description = "All my Kaggle competitions"
authors = ["alekseik1 <1alekseik1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
docformatter = "^1.7.5"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
