[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
name = "kaggle_competitions"
version = "1.0.0"
description = "All my Kaggle competitions"
authors = ["alekseik1 <1alekseik1@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.0"
loguru = "^0.7.0"
ipywidgets = "^8.0.7"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
dvc = { version = "^3.9.0", extras = ["s3"] }
kaggle = "^1.5.16"


[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
docformatter = "^1.7.5"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
titanic = "kaggle_competitions.titanic.run:run"
